refactor(users): fix JAR resource loading paths, replace RoleRepository with RoleService, and secure optional gets